z-index navbar fixed

--- a/frontend/src/style/components/_Cursor.sass
+++ b/frontend/src/style/components/_Cursor.sass
@@ -6,7 +6,7 @@
     border: solid 2px $blue
     background: transparent
     transform: translate(-50%,-50%)
-    z-index: 8
+    z-index: 9
     pointer-events: none
 
     &__innerCircle
@@ -16,7 +16,7 @@
         width: .3rem
         background: $blue
         transform: translate(-50%,-50%)
-        z-index: 8
+        z-index: 9
         pointer-events: none
 
 @media (pointer: coarse)
