--- a/frontend/src/style/components/_Footer.sass
+++ b/frontend/src/style/components/_Footer.sass
@@ -125,8 +125,6 @@
             justify-content: center
             &--nav
                 display: none
-            &--info
-                display: none
 
         &__list
             flex-direction: row
